--- a/index.html
+++ b/index.html
@@ -6,179 +6,153 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@600&display=swap"
+    rel="stylesheet">
 
-  <title>HTML & CSS Sample document</title>
+
+  <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
+
 </head>
 
-<body>
-  <header>
-    <div class="container"></div>
+<body class="page">
+
+  <header class="page__header">
+    <div class="container">
+      <a href="" class="link"><img src="/img/logo.svg" alt="Huddle logo" class="header__logo"></a>
+      <a href="" class="link header__link">Try It Free</a>
+    </div>
   </header>
-  <main>
-    <div class="container">
-      <h1>Compost</h1>
-      <p><b>Compost</b> (<a href="#">/ˈkɒmpɒst/</a> or <a href="#">/ˈkɒmpoʊst/</a>) is organic matter that has been <a
-          href="#">decomposed</a> in a process called composting. This process <a href="#">recycles</a> various <a
-          href="#">organic materials</a> otherwise regarded as waste products and produces a <a href="#">soil
-          conditioner</a> (the compost).</p>
-      <p>Compost is rich in nutrients. It is used, for example, in <a href="#">gardens</a>, <a href="#">landscaping</a>,
-        <a href="#">horticulture</a>, <a href="#">urban agriculture</a> and <a href="#">organic farming</a>. The compost
-        itself is beneficial for the land in many ways, including as a soil conditioner, a <a href="#">fertilizer</a>,
-        addition of vital <a href="#">humus</a> or <a href="#">humic acids</a>, and as a natural pesticide for soil.
-        Compost is useful for erosion control, land and stream reclamation, wetland construction, and as landfill cover.
-      </p>
-      <p>At the simplest level, the process of composting requires making a heap of wet organic matter (also called
-        green waste), such as leaves, grass, and food scraps, and waiting for the materials to break down into humus
-        after a period of months. However, composting can also take place as a multi-step, closely monitored process
-        with measured inputs of water, air, and carbon- and nitrogen-rich materials. The decomposition process is aided
-        by shredding the plant matter, adding water and ensuring proper aeration by regularly turning the mixture when
-        open piles or "windrows" are used. Fungi, earthworms and other detritivores further break up the material.
-        Aerobic bacteria and fungi manage the chemical process by converting the inputs into heat, carbon dioxide, and
-        ammonium.</p>
-      <h2>Fundamentals</h2>
-      <p>Composting is an aerobic method (meaning that it requires the presence of air) of decomposing organic solid
-        wastes.[1] It can therefore be used to recycle organic material. The process involves decomposition of organic
-        material into a humus-like material, known as compost, which is a good fertilizer for plants. Composting
-        requires the following three components: human management, aerobic conditions, and development of internal
-        biological heat.
-        <br />
-        Composting organisms require four equally important ingredients to work effectively:</p>
-      <ul>
-        <li><b>Carbon</b> — for energy; the microbial oxidation of carbon produces the heat, if included at suggested
-          levels.[2] High carbon materials tend to be brown and dry.</li>
-        <li><b>Nitrogen</b> — to grow and reproduce more organisms to oxidize the carbon. High nitrogen materials tend
-          to be green (or colorful, such as fruits and vegetables) and wet.</li>
-        <li><b>Oxygen</b> — for oxidizing the carbon, the decomposition process.</li>
-        <li><b>Water</b> — in the right amounts to maintain activity without causing anaerobic conditions.</li>
-      </ul>
-      <p>Certain ratios of these materials will provide microorganisms to work at a rate that will heat up the pile.
-        Active management of the pile (e.g. turning) is needed to maintain sufficient supply of oxygen and the right
-        moisture level. The air/water balance is critical to maintaining high temperatures 130–160 °F (54–71 °C) until
-        the materials are broken down.</p>
-      <h3>Heading size h3</h3>
-      <p>The most efficient composting occurs with an optimal carbon:nitrogen ratio of about 25:1.[5] Hot container
-        composting focuses on retaining the heat to increase decomposition rate and produce compost more quickly. Rapid
-        composting is favored by having a C/N ratio of ~30 or less. Above 30 the substrate is nitrogen starved, below 15
-        it is likely to outgas a portion of nitrogen as ammonia.[6]</p>
-      <h4>Heading size h4</h4>
-      <p>Nearly all plant and animal materials have both carbon and nitrogen, but amounts vary widely, with
-        characteristics noted above (dry/wet, brown/green).[7] Fresh grass clippings have an average ratio of about 15:1
-        and dry autumn leaves about 50:1 depending on species. Mixing equal parts by volume approximates the ideal C:N
-        range. Few individual situations will provide the ideal mix of materials at any point. Observation of amounts,
-        and consideration of different materials as a pile is built over time, can quickly achieve a workable technique
-        for the individual situation.</p>
-      <h5>Heading size h5</h5>
-      <p>Certain ratios of these materials will provide microorganisms to work at a rate that will heat up the pile.
-        Active management of the pile (e.g. turning) is needed to maintain sufficient supply of oxygen and the right
-        moisture level. The air/water balance is critical to maintaining high temperatures 130–160 °F (54–71 °C) until
-        the materials are broken down.</p>
-      <p>The most efficient composting occurs with an optimal carbon:nitrogen ratio of about 25:1.[5] Hot container
-        composting focuses on retaining the heat to increase decomposition rate and produce compost more quickly. Rapid
-        composting is favored by having a C/N ratio of ~30 or less. Above 30 the substrate is nitrogen starved, below 15
-        it is likely to outgas a portion of nitrogen as ammonia.[6]</p>
-      <p>Nearly all plant and animal materials have both carbon and nitrogen, but amounts vary widely, with
-        characteristics noted above (dry/wet, brown/green).[7] Fresh grass clippings have an average ratio of about 15:1
-        and dry autumn leaves about 50:1 depending on species. Mixing equal parts by volume approximates the ideal C:N
-        range. Few individual situations will provide the ideal mix of materials at any point. Observation of amounts,
-        and consideration of different materials as a pile is built over time, can quickly achieve a workable technique
-        for the individual situation.</p>
-      <br />
-      <form>
-        <div>
-          <section>
-            <h2>This is an example of all available elements in a form. </h2>
-          </section>
-          <section>
-            <label for="simple-textfield"><span>&nbsp;</span>A simple textfield<span>*</span>
-            </label>
-            <input type="text" value="" id="simple-textfield" />
-          </section>
-          <section>
-            <label for="simple-textarea">A simple textarea</label>
-            <textarea cols="20" rows="5" id="simple-textarea"></textarea>
-          </section>
-          <section>
-            <label for="simple-radio">What do you like?</label>
-            <span>
-              <input checked="checked" class="select-type" type="radio" value="yes" id="simple-radio" />
-              <label for="simple-radio">I like this radio</label>
-              <br />
-              <input class="select-type" type="radio" value="no" id="radio-second" />
-              <label for="radio-second">No, I like this one better</label>
-              <br />
-              <input class="select-type" type="radio" value="best" id="radio-third" />
-              <label for="radio-third">Really, this is the one I like most</label>
-              <br />
-            </span>
-          </section>
-          <section>
-            <label for="simple-checkbox">Select your options</label>
-            <span>
-              <input class="select-type" type="checkbox" value="value1" id="simple-checkbox" />
-              <label for="simple-checkbox">Title 1</label>
-              <input class="select-type" type="checkbox" value="value2" id="simple-checkbox-two" />
-              <label for="simple-checkbox-two">Title 2</label>
-              <input class="select-type" type="checkbox" value="value3" id="simple-checkbox-three" />
-              <label for="simple-checkbox-three">Title 3</label>
-            </span>
-          </section>
-          <section>
-            <label for="options">Or better select options like this?</label>
-            <select id="options">
-              <option value="value1">Title 1</option>
-              <option value="value2">Title 2</option>
-              <option value="value3">Title 3</option>
-            </select>
-          </section>
-          <section>
-            <label for="multiple-options">Or EVEN better, multiple select options?</label>
-            <select multiple="multiple" id="multiple-options">
-              <option value="value1">Title 1</option>
-              <option value="value2">Title 2</option>
-              <option value="value3">Title 3</option>
-            </select>
-          </section>
-          <section>
-            <label>Simple File Upload</label>
-            <input type="file" name="ff_nm_bfQuickMode2857602[]" id="file-select" value="test" />
-          </section>
 
-          <section>
-            <label id="bfLabel85" for="calender">Calendar</label>
-            <input type="date" id="calender" />
-          </section>
+  <main class="page__content">
 
-          <div>
-            <section>
-              This is a section that holds text elements, arranged inline. By the way: Each section includes a
-              description
-              text with <span style="color: #ff0000;">full</span> <strong>HTML </strong><span
-                style="text-decoration: underline;">capabilities</span>!<br />
-            </section>
-            <div>
-              <span>
-                <label for="name">Name<span>*</span></label>
-                <input class="select-type" type="text" value="" id="name" />
-              </span>
-              <span>
-                <label for="surname">Surname<span>*</span></label>
-                <input class="select-type" type="text" value="" id="surname" />
-              </span>
-            </div>
-          </div>
-          <div>
+    <article class="hero">
+      <div class="container">
+        <div class="group">
+          <h1 class="title hero__title">
+            Build The Community Your Fans Will Love
+          </h1>
 
-      </form>
-    </div>
+          <p class="copy hero__copy">
+            Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+            Create connections with your users as you engage in genuine discussion.
+          </p>
+
+          <a href="" class="link hero__link">Get Started For Free</a>
+        </div>
+        <img src="/img/illustration-mockups.svg" alt="mockups of the huddle desktop and mobile website"
+          class="img hero__img">
+      </div>
+    </article>
+
+    <article class="grow">
+      <div class="container">
+        <img src="/img/illustration-grow-together.svg" alt="grow together" class="img grow__img">
+        <div class="group group__grow">
+          <h2 class="title grow__title">
+            Grow Together
+          </h2>
+
+          <p class="copy grow__copy">
+            Generate meaningful discussions with your audience and build a strong, loyal community.
+            Think of the insightful conversations you miss out on with a feedback form.
+          </p>
+        </div>
+      </div>
+    </article>
+
+    <article class="flowing">
+      <div class="container">
+        <img src="/img//illustration-flowing-conversation.svg" alt="flowing conversation" class="img flowing__img">
+        <div class="group">
+          <h2 class="title flowing__title">
+            Flowing Conversations
+          </h2>
+
+          <p class="copy flowing__copy">
+            You wouldn't paginate a conversation in real life, so why do it online? Our threads
+            have just-in-time loading for a more natural flow.
+          </p>
+        </div>
+      </div>
+    </article>
+
+    <article class="users">
+      <div class="container">
+        <img src="/img/illustration-your-users.svg" alt="users working together" class="img users__img">
+        <div class="group">
+          <h2 class="title users__title">
+            Your Users
+          </h2>
+
+          <p class="copy users__copy">
+            It takes no time at all to integrate Huddle with your app's authentication solution.
+            This means, once signed in to your app, your users can start chatting immediately.
+          </p>
+        </div>
+      </div>
+    </article>
+
+    <aside class="cta">
+      <div class="container">
+        <h2 class="title cta__title">
+          Ready To Build Your Community?
+        </h2>
+
+        <a href="" class="link cta__link">Get Started For Free</a>
+      </div>
+    </aside>
+
   </main>
-  <footer>
+
+  <footer class="page__footer">
     <div class="container">
-      <p class="attribution">
-        Coded by <a href="#">AX-d</a>
+      <a href="" class="link"><img src="/img/logo.svg" alt="Huddle logo" class="footer__logo"></a>
+      <ul class="list footer__list footer__list--connect">
+        <li class="footer__list-item footer__list-item--location">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua
+
+        </li>
+        <li class="footer__list-item footer__list-item--phone">
+          <a href="#" class="link footer__link">+1-543-123-4567</a>
+        </li>
+        <li class="footer__list-item footer__list-item--email"><a href="#"
+            class="link footer__link">example@huddle.com</a></li>
+      </ul>
+
+      <ul class="list footer__list footer__list--us">
+        <li class="footer__list-item"><a href="#" class="link footer__link">About Us</a></li>
+        <li class="footer__list-item"><a href="#" class="link footer__link">What We Do</a></li>
+        <li class="footer__list-item"><a href="#" class="link footer__link">FAQ</a></li>
+      </ul>
+
+      <ul class="list footer__list footer__list--extra">
+        <li class="footer__list-item"><a href="#" class="link footer__link">Career</a></li>
+        <li class="footer__list-item"><a href="#" class="link footer__link">Blog</a></li>
+        <li class="footer__list-item"><a href="#" class="link footer__link">Contact Us</a></li>
+      </ul>
+      <ul class="list footer__list footer__list--social">
+        <li class="footer__list-item"><a href="#" class="link social__link"><img src="/img/facebook.svg"
+              alt="Link to facebook" class="social__img"></a></li>
+        <li class="footer__list-item"><a href="#" class="link social__link"><img src="/img/twitter.svg"
+              alt="Link to twitter" class="social__img"></a></li>
+        <li class="footer__list-item"><a href="#" class="link social__link"><img src="/img/instagram.svg"
+              alt="Link to instagram" class="social__img"></a></li>
+      </ul>
+
+      <p class="copy footer__copy">
+        &copy; Copyright 2018 Huddle. All rights reserved.
+      </p>
     </div>
-    </p>
+    <div>
+      <p class="footer__attr">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          class="link footer__attr--link">Frontend Mentor</a>.
+        Coded by <a href="#" class="link footer__attr--link">AX-d</a>.
+      </p>
+    </div>
   </footer>
 </body>
 
