--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <article class="grow">
       <div class="container">
         <img src="/img/illustration-grow-together.svg" alt="grow together" class="img grow__img">
-        <div class="group group__grow">
+        <div class="group group--grow">
           <h2 class="title grow__title">
             Grow Together
           </h2>
@@ -65,7 +65,7 @@
     <article class="flowing">
       <div class="container">
         <img src="/img//illustration-flowing-conversation.svg" alt="flowing conversation" class="img flowing__img">
-        <div class="group">
+        <div class="group group--flowing">
           <h2 class="title flowing__title">
             Flowing Conversations
           </h2>
@@ -81,7 +81,7 @@
     <article class="users">
       <div class="container">
         <img src="/img/illustration-your-users.svg" alt="users working together" class="img users__img">
-        <div class="group">
+        <div class="group group--users">
           <h2 class="title users__title">
             Your Users
           </h2>
